# Language-Teacher

./: .gitignore  Language_Teacher.py  README.md  add.py  main.py  pyproject.toml  repocontext.sh  style.css
.streamlit/: config.toml
pages/: 1_Enter_Cards.py  2_AI.py  2_Sentence_Practice.py  3_Edit_Cards.py  4_Card_Agent.py  4_StudyPlanGeneration.py  4_Study_Plan_Generation.py  5_dragable_example.py
src/: anki.py  audio.py  config.py  db.py  gemini.py  llm.py  utils.py
src/plans/: __init__.py  generate_and_save.py  plan.py  planning.py  summarize.py
src/tasks/: __init__.py  base_task.py  dragging_task.py  fillin_task.py  sentence_order.py  task.py  vocab_tasks.py
