[project]
name = "language-teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "google-genai>=1.16.1",
    "gtts>=2.5.4",
    "loguru>=0.7.3",
    "ollama>=0.4.8",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]
