[project]
name = "language-teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "alembic>=1.15.2",
    "google-genai>=1.16.1",
    "gtts>=2.5.4",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "ollama>=0.4.8",
    "pdf2image>=1.17.0",
    "pre-commit>=4.2.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.2",
]
